fix spacing on menu buttons

--- a/src/components/BeachPage/BeachPage.module.css
+++ b/src/components/BeachPage/BeachPage.module.css
@@ -51,6 +51,7 @@
     width: 100%;
     height: 55px;
     background-color: var(--primary-color);
+  
 }
 
 .buttoncontainer{
@@ -83,6 +84,7 @@
     display: flex;
     flex-direction: column;
     flex-grow: 1;
+    flex: 1;
 }
 
 .buttonlabel{
